--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-state-managementapp",
+  "name": "React-State-Management",
   "homepage": "http://umeshuhb.github.io/React-State-Management",
   "version": "0.1.0",
   "private": true,
