--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React-State-Management",
+  "name": "react-state-management",
   "homepage": "http://umeshuhb.github.io/React-State-Management",
   "version": "0.1.0",
   "private": true,
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
