--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-state-management",
-  "homepage": "http://umeshuhb.github.io/React-State-Management",
+  "homepage": "http://umeshuhb.github.io/react-state-management",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
